--- a/code/templates/core/contact.html
+++ b/code/templates/core/contact.html
@@ -1,10 +1,10 @@
 {% extends "core/base.html" %}
 
 {% load staticfiles %}
-{% block body %}
 
-   
-    <h1>Contact Us</h1>
+{% block body %}
+    
+    <h1 class="page-title">Contact Us</h1>
     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus tempus, neque in suscipit elementum,
         mi velit vestibulum nulla, eget malesuada urna justo at ex. Nullam gravida volutpat nisi, at ullamcorper
         ante iaculis lacinia.</p>
@@ -37,6 +37,3 @@
 
 {% endblock %}
 
-{% block extra_js %}
-
-{% endblock %}
