--- a/code/templates/core/base.html
+++ b/code/templates/core/base.html
@@ -14,7 +14,7 @@
     <title>FDA Drug Monitor</title>
     {% endblock %}
 
-    <link href="{% static "jquery-ui-1.11.4.custom/jquery-ui.css" %}" rel="stylesheet">
+    <link href="{% static "js/jquery-ui.css" %}" rel="stylesheet">
     <!-- if (development) -->
     <link href="{% static "css/style.less" %}" type='text/css' rel="stylesheet/less"/>
     <script type="text/javascript">
@@ -30,12 +30,11 @@
     <!-- <link href="{% static "css/style.css" %}" type='text/css' rel="stylesheet"/> -->
     <!-- endif -->
 
-{# TODO -- download actual files below--not CDN #}
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+      <script src="{% static "js/html5shiv.min.js" %}"></script>
+      <script src="{% static "js/respond.min.js" %}"></script>
     <![endif]-->
 </head>
 
@@ -59,11 +58,10 @@
 
 	</header>
 
-
     <!-- javascript enabled message -->
     <noscript>
-        <div class="alert alert-warning">
-            <p class="text-center"><strong>For a better browsing experience, please enable javascript</strong></p>
+        <div class="alert">
+            <p class="text-alert"><strong>For a better browsing experience, please enable javascript</strong></p>
         </div>
     </noscript>
 
@@ -99,11 +97,18 @@
             <li><a href="{% url 'accessibility' %}">Accessibility</a></li>
             <li><a href="{% url 'about' %}#licensing">Licensing Information</a></li>
 		</ul>
-        <p class="text-warning"><strong>Disclaimer:</strong> Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+        <p ><strong>Disclaimer:</strong> Lorem ipsum dolor sit amet, consectetur adipiscing elit.
             Vivamus tempus, neque in suscipit elementum, mi velit vestibulum nulla,
             eget malesuada urna justo at ex.</p>
 	</footer><!-- end footer -->
 
+    <script>
+        {# django url variables for search bar #}
+        var urlLabels = "{% url 'search_labels' %}";
+        var urlEvents = "{% url 'search_events' %}";
+        var urlEnforcements = "{% url 'search_enforcements' %}";
+        var urlManufacturers = "{% url 'search_manufacturers' %}";
+    </script>
 
     <script src="{% static "js/jquery-2.1.3.min.js" %}"></script>
     <script src="{% static "js/jquery-ui.js" %}"></script>
