--- a/code/templates/core/tab_labels.html
+++ b/code/templates/core/tab_labels.html
@@ -19,7 +19,7 @@
                                 {{ value|default:"N/A" }}
                             {% endif %}
                         </div>
-                        <span class="more">More...</span>
+                        <span class="more" style="display:none;">More...</span>
                         <span class="less" style="display:none;">Less...</span>
                     </td>
                 </tr>
