--- a/code/templates/core/homepage.html
+++ b/code/templates/core/homepage.html
@@ -23,4 +23,19 @@
         mi velit vestibulum nulla, eget malesuada urna justo at ex. Nullam gravida volutpat nisi, at ullamcorper
         ante iaculis lacinia. In varius risus urna, nec pharetra dolor scelerisque quis. Curabitur sem nisl,
         ornare quis ornare quis, consequat ut sem. Nullam facilisis interdum augue vel fringilla.</p>
+    <div class="row responsive01">
+		<div class="span8">
+			<h2><a href="">Nullam gravida</a></h2>
+			<p>Vivamus tempus, neque in suscipit elementum, mi velit vestibulum nulla, eget malesuada urna justo at ex. Nullam gravida volutpat nisi, at ullamcorper ante iaculis lacinia.</p>
+		</div>
+		<div class="span8">
+			<h2><a href="">Vestibulum nulla</a></h2>
+			<p>Vivamus tempus, neque in suscipit elementum, mi velit vestibulum nulla, eget malesuada urna justo at ex. Nullam gravida volutpat nisi, at ullamcorper ante iaculis lacinia.</p>
+		</div>
+		<div class="span8">
+			<h2><a href="">Eget malesuada urn</a></h2>
+			<p>Vivamus tempus, neque in suscipit elementum, mi velit vestibulum nulla, eget malesuada urna justo at ex. Nullam gravida volutpat nisi, at ullamcorper ante iaculis lacinia.</p>
+		</div>
+		<div class="clear"></div>
+	</div>
 {% endblock %}
