--- a/code/templates/core/details_adverse_events.html
+++ b/code/templates/core/details_adverse_events.html
@@ -14,18 +14,15 @@
 {% endblock %}
 
 {% block text %}
-    <div class="row">
-        <div class="col-xs-12">
-            <h1 class="page-title">Adverse Event Details<br />
-                <small>Information for <strong>{{ q|replace_plus_signs }}</strong></small>
-            </h1>
-            <p class="page-description">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec a magna ullamcorper, commodo nunc consectetur,
-            pretium elit. Integer purus elit, commodo sed interdum in, aliquet sed erat. Donec quis quam vel massa
-            consequat dictum eget in diam.
-            </p>
-        </div>
-    </div>
+    <h1 class="page-title">Adverse Event Details<br />
+        <small>Information for <strong>{{ q|replace_plus_signs }}</strong></small>
+    </h1>
+    <p class="page-description">
+    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec a magna ullamcorper, commodo nunc consectetur,
+    pretium elit. Integer purus elit, commodo sed interdum in, aliquet sed erat. Donec quis quam vel massa
+    consequat dictum eget in diam.
+    </p>
+
 {% endblock %}
 
 {% block details %}
@@ -86,7 +83,7 @@
                 }
             },
             title: {
-                text: 'Counts for drugs with adverse effects'
+                text: 'Top 25 drugs with with adverse effect'
             },
             subtitle: {
                 text: '{{ q }}'
@@ -109,8 +106,7 @@
             },
             tooltip: {
                 headerFormat: '<span style="font-size:10px">{point.key}</span>',
-                pointFormat: '<div><span style="color:{series.color};">{series.name}</span>: <b>{point.y:.0f}</b></div>' +
-                    '<div>Undergoing Investigation: <em>{point.investigation}</em></div>',
+                pointFormat: '<div><span style="color:{series.color};">{series.name}</span>: <b>{point.y:.0f}</b></div>',
                 shared: true,
                 useHTML: true
             },
@@ -220,6 +216,7 @@
     // fix for highcharts width. it needs to wait for the div or else it won't fill the space
     $('a[href=#drugs]').click(function() {
        setTimeout(function(){
+           adverseEffectsData.data = adverseEffectsData.data.slice(0,25)
          createAdverseEffectsChart(drugNames, adverseEffectsData);
       }, 0);
     });
