--- a/code/templates/core/landing_manufacturers.html
+++ b/code/templates/core/landing_manufacturers.html
@@ -13,7 +13,7 @@
 {% endblock %}
 
 {% block text %}
-    <h1 class="page-title">Manufacturers</h1>
+    <h1 class="page-title">Drug Manufacturers</h1>
     <p class="page-description">Select a manufacturer from the list below or enter a manufacturer name into the search above
         to view current related information</p>
 
