adding fields to adverse events details

--- a/code/templates/core/landing_adverse_events.html
+++ b/code/templates/core/landing_adverse_events.html
@@ -15,7 +15,7 @@
 {% block text %}
     <h1 class="page-title">Adverse Events</h1>
     <p class="page-description">Select an adverse event from the list below or enter an event into the search
-    above to view current related information
+    above to view current related information.  Only the top 100 adverse events are shown here.</p>
 {% endblock %}
 
 {% block details %}
