--- a/code/templates/core/landing_enforcement_reports.html
+++ b/code/templates/core/landing_enforcement_reports.html
@@ -15,7 +15,7 @@
 {% block text %}
     <h1 class="page-title">Enforcement Reports</h1>
     <p class="page-description">Select a state from the map below or enter a state into the search above
-        to view current related information</p>
+        to view current related information.</p>
 {% endblock %}
 
 {% block details %}
