--- a/code/templates/core/landing_manufacturers.html
+++ b/code/templates/core/landing_manufacturers.html
@@ -15,7 +15,7 @@
 {% block text %}
     <h1 class="page-title">Drug Manufacturers</h1>
     <p class="page-description">Select a manufacturer from the list below or enter a manufacturer name into the search above
-        to view current related information</p>
+        to view current related information.  Only the top 100 manufacturers are shown here.</p>
 
 {% endblock %}
 
