--- a/code/templates/core/details_adverse_events.html
+++ b/code/templates/core/details_adverse_events.html
@@ -18,7 +18,7 @@
         <small>Information for <strong>{{ q|replace_plus_signs }}</strong></small>
     </h1>
     <p class="page-description">
-    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec a magna ullamcorper, commodo nunc consectetur,
+    <strong>Definition:</strong> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec a magna ullamcorper, commodo nunc consectetur,
     pretium elit. Integer purus elit, commodo sed interdum in, aliquet sed erat. Donec quis quam vel massa
     consequat dictum eget in diam.
     </p>
@@ -44,7 +44,7 @@
 
         <!-- tab 2 -->
         <div id="drugs">
-            <p>Click on the chart below to see adverse effects by gender for a given drug</p>
+            <p>Click on the chart below to see adverse effects by gender for a given drug.</p>
             <div id="adverseChart"></div>
             <br/>
             <div id="productChart"></div><br/>
