--- a/code/templates/core/details_enforcement_reports.html
+++ b/code/templates/core/details_enforcement_reports.html
@@ -19,9 +19,9 @@
         <small>Information for <strong>{{ q|replace_plus_signs }}</strong></small>
     </h1>
     <p class="page-description">
-    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec a magna ullamcorper, commodo nunc consectetur,
-    pretium elit. Integer purus elit, commodo sed interdum in, aliquet sed erat. Donec quis quam vel massa
-    consequat dictum eget in diam.
+    The FDA Drug Monitor enforcement reports are based on data from the
+        <a href="https://open.fda.gov/data/res/" target="_blank">FDA Recall Enterprise System (RES)</a>. The
+    data cover records from 2004 - present, and are updated weekly.
     </p>
 {% endblock %}
 
@@ -44,14 +44,8 @@
 
         <!-- tab 2 -->
         <div id="drugs">
-            <p>Click the chart below to visit the drug detail page</p>
+            <p>Click the chart below to visit the drug detail page.</p>
                 <div id="enforcementChart"></div><br/>
-                <div id="productChart"></div><br/>
-{#                {% for results in events %}<br />#}
-{#                {% for key, value in results.items %}#}
-{#                {{ key }}: {{ value }}<br />#}
-{#                {% endfor %}#}
-{#                {% endfor %}#}
         </div><!-- end tab 2 -->
     </div><!-- end panel -->
 
