--- a/code/templates/core/tab_enforcements.html
+++ b/code/templates/core/tab_enforcements.html
@@ -1,10 +1,16 @@
 {% load url_tags %}
 
 {% for result in enforcements %}
-    <h3><i></i>Recall Number: {{ result.recall_number }} [{{ result.report_date }}: {{ result.city }}, {{ result.state }}]</h3>
+    <h3><i></i>Recall:
+        {{ result.recall_number }}
+        (Recalled by: {{ result.recalling_firm|default:"N/A"}})
+        [{{ result.report_date }}:
+        {{ result.city }},
+        {{ result.state }}] &mdash; {{ result.voluntary_mandated }}
+    </h3>
     <div id="{{ prefix }}_panel{{ forloop.counter }}">
         <table class="fda-table-default">
-            <!--caption class="sr-only">Recall Number: {{ result.recall_number }} [{{ result.report_date }}: {{ result.city }}, {{ result.state }}]</caption-->
+            <!--caption class="sr-only">Recall ID: {{ result.recall_number }} [{{ result.report_date }}: {{ result.city }}, {{ result.state }}] &mdash; {{ result.voluntary_mandated }}</caption-->
             <tbody>
             {% for key, value in result.items %}
                 <tr>
